force-app/main/default/objects/ClaimItem__c/ClaimItem__c.object-meta.xml
<CustomObject>
    <label>Claim Item</label>
    <nameField>
        <label>Claim Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>