force-app/main/default/objects/ClaimItem__c/fields/AdjustedAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustedAmount__c</fullName>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>