force-app/main/default/objects/ClaimItem__c/fields/AssetUsageUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>AssetUsageUnitOfMeasure__c</fullName>
    <label>Asset Usage Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>KiloMeter</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>