force-app/main/default/objects/ClaimItem__c/fields/AssetUsageValue__c.field-meta.xml
<CustomField>
    <fullName>AssetUsageValue__c</fullName>
    <label>Asset Usage Value</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>