force-app/main/default/objects/ClaimItem__c/fields/FaultDate__c.field-meta.xml
<CustomField>
    <fullName>FaultDate__c</fullName>
    <label>Fault Date</label>
    <type>DateTime</type>
</CustomField>