force-app/main/default/objects/ClaimItem__c/fields/RepairDate__c.field-meta.xml
<CustomField>
    <fullName>RepairDate__c</fullName>
    <label>Repair Date</label>
    <type>DateTime</type>
</CustomField>